[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scripts/BuildingWheelUI.gd" id="1_l41ni"]

[node name="BuildingWheelUI" type="CanvasLayer"]
layer = 55
script = ExtResource("1_l41ni")
visible = false

[node name="RadialMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
mouse_filter = 1

[node name="WheelContainer" type="Control" parent="RadialMenu"]
position = Vector2(480, 270)
size = Vector2(300, 300)
mouse_filter = 0

[node name="InfoPanel" type="Panel" parent="RadialMenu"]
position = Vector2(320, 0)
size = Vector2(200, 150)
self_modulate = Color(1, 1, 1, 0.9)

[node name="InfoContainer" type="VBoxContainer" parent="RadialMenu/InfoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = -12.0

[node name="PieceNameLabel" type="Label" parent="RadialMenu/InfoPanel/InfoContainer"]
text = "Select a piece"
horizontal_alignment = 1

[node name="PieceDescLabel" type="Label" parent="RadialMenu/InfoPanel/InfoContainer"]
text = ""
autowrap_mode = 2

[node name="InfoSeparator1" type="HSeparator" parent="RadialMenu/InfoPanel/InfoContainer"]

[node name="MaterialsLabel" type="Label" parent="RadialMenu/InfoPanel/InfoContainer"]
text = "Materials:"

[node name="MaterialsList" type="VBoxContainer" parent="RadialMenu/InfoPanel/InfoContainer"]

[node name="InfoSeparator2" type="HSeparator" parent="RadialMenu/InfoPanel/InfoContainer"]

[node name="TierSelector" type="HBoxContainer" parent="RadialMenu/InfoPanel/InfoContainer"]
size_flags_horizontal = 3
alignment = 1

[node name="TierLabel" type="Label" parent="RadialMenu/InfoPanel/InfoContainer/TierSelector"]
text = "Tier:"
size_flags_horizontal = 1

[node name="TierPrevButton" type="Button" parent="RadialMenu/InfoPanel/InfoContainer/TierSelector"]
text = "<"
custom_minimum_size = Vector2(32, 32)

[node name="TierValueLabel" type="Label" parent="RadialMenu/InfoPanel/InfoContainer/TierSelector"]
text = "Wood"
custom_minimum_size = Vector2(80, 32)
horizontal_alignment = 1
size_flags_horizontal = 1

[node name="TierNextButton" type="Button" parent="RadialMenu/InfoPanel/InfoContainer/TierSelector"]
text = ">"
custom_minimum_size = Vector2(32, 32)

[node name="HintLabel" type="Label" parent="RadialMenu"]
position = Vector2(0, 520)
size = Vector2(960, 32)
text = "[LMB] Place  [RMB] Cancel  [Scroll] Rotate  [<>] Tier"
horizontal_alignment = 1
